# fork_aws-iot-device-sdk-embedded-c

./: .gitmodules  CMakeLists.txt
external_libs/jsmn/: CMakeLists.txt
include/: aws_iot_mqtt_client.h  buffer_output.h
src/: aws_iot_mqtt_client.c  aws_iot_mqtt_client_common_internal.c  aws_iot_shadow.c
